[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Pia Manns <pia.manns@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
jsonpickle = "1.3.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
